p2/conf/services.yml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  labels: 
    app: nginx
spec:
  selector:
    app: app1 
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: app2-service
  labels: 
    app: nginx
spec:
  selector:
    app: app2 
  type: ClusterIP 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: app3-service
  labels: 
    app: nginx
spec:
  selector:
    app: app3 
  type: ClusterIP 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
